# Business-Raider---bot

./: Dockerfile  README.md  pyproject.toml
bot/: __init__.py  ai.py  config.py  handlers.py  main.py  rating.py  storage.py
tests/: test_rating.py
